# R267

./: .gitignore  CMakeLists.txt  README  README.md  r267.sublime-project  r267.sublime-workspace
examples/: CMakeLists.txt
examples/compute/: compute.cpp  compute.hpp  main.cpp
examples/converter/: main.cpp
examples/cubemap/: ImageCube.cpp  ImageCube.hpp  main.cpp
examples/gui/: main.cpp
examples/mesh/: main.cpp
examples/quad/: main.cpp
examples/texture/: main.cpp
examples/triangle/: main.cpp
shaders/compute/: light.h  main.comp  main.frag  main_comp.spv  main_frag.spv  main_vert.spv
shaders/cubemap/: brdf.frag  brdf_frag.spv  cubemap.frag  cubemap.vert  cubemap_frag.spv  cubemap_vert.spv  filter.frag  filter.vert  filter_frag.spv  filter_vert.spv  image2cube.frag  image2cube.geom  image2cube.vert  image2cube_frag.spv  image2cube_geom.spv  image2cube_vert.spv  irradiance.frag  irradiance_frag.spv
shaders/effects/: differed.frag  differed.vert  differed_frag.spv  differed_vert.spv  displace.tesc  displace.tese  displace_tesc.spv  displace_tese.spv  gbuffer.frag  gbuffer.vert  gbuffer_frag.spv  gbuffer_vert.spv  light.glsl  ssao.frag  ssao.vert  ssao_frag.spv  ssao_vert.spv
shaders/gui/: main.frag  main.vert  main_frag.spv  main_vert.spv  render.frag  render_frag.spv
shaders/mesh/: main.frag  main.vert  main_frag.spv  main_vert.spv
shaders/texture/: main.frag  main.vert  main_frag.spv  main_vert.spv
shaders/triangle/: main.frag  main.vert  main_frag.spv  main_vert.spv
shaders/viewer/: basic.frag  basic_frag.spv  basic_vert.spv
src/: CMakeLists.txt
src/base/: BaseApp.hpp  MainApp.cpp  MainApp.hpp  default.hpp
src/base/gui/: gui.cpp  gui.hpp
src/base/scene/: bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  format.hpp  ibl.cpp  ibl.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp
src/base/vk/: additional.cpp  additional.hpp  buffer.cpp  buffer.hpp  compute.cpp  compute.hpp  device.cpp  device.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  shape.cpp  shape.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  uniform.cpp  uniform.hpp  utils.cpp  utils.hpp
src/base/wnd/: BaseApp.hpp  MainApp.cpp  MainApp.hpp
viewer/: CMakeLists.txt
viewer/src/: IBL.cpp  IBL.hpp  differed.cpp  differed.hpp  gbuffer.cpp  gbuffer.hpp  main.cpp  ssao.cpp  ssao.hpp  toolbar.cpp  toolbar.hpp  viewer.cpp  viewer.hpp
